--- a/src/components/Switcher/style.less
+++ b/src/components/Switcher/style.less
@@ -1,3 +1,51 @@
 .switcher-container {
+  padding: 10px;
+  .switch {
+    cursor: pointer;
+    .svg-inline--fa {
+      color: #eee;
+      font-size: 25px;
+      margin: 1px 5px;
+      &.fa-microphone {
+        font-size: 20px;
+      }
+    }
+    .ui-switch {
+      display: inline-block;
+      position: relative;
+      border: 1px solid #ddd;
+      background-color: #eee;
+      border-radius: 20px;
+    }
+    .is-animated .ui-button {
+      transition: margin ease-out .2s, border ease-in .2s
+    }
+    .ui-checkbox {
+      opacity: 0;
+      display: block;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      cursor: pointer;
+    }
+    .ui-button {
+      display: block;
+      width: 16px;
+      height: 16px;
+      margin: 2px 24px 2px 2px;
+      border-width: 1px;
+      border-style: solid;
+      border-color: #ddd;
+      background-color: #fff;
+      border-radius: 9px
+    }
+    .ui-checkbox:checked + .ui-button {
+      margin: 2px 2px 2px 24px;
+      //background-color: #7EB36D;
+      //border-color: #5B9E46
+    }
+  }
 
 }
