Mic and keyboard inputs working and SpeechUtil added

--- a/src/html/index.ejs
+++ b/src/html/index.ejs
@@ -9,7 +9,7 @@
 
   <body>
     <div id="app"></div>
-    <audio class="sound chime" src="audio/chime.mp3"></audio>
+    <audio class="sound rec" src="audio/chime.mp3"></audio>
     <script
         src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
