--- a/src/components/SearchBox/style.less
+++ b/src/components/SearchBox/style.less
@@ -1,5 +1,8 @@
 .search-box-container {
-  height: 90vh;
+  height: 100vh;
   width: 100vw;
   background-image: linear-gradient(to right top, #814a9e, #d1518f, #ff7270, #ffa954, #f5e459);
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
