--- a/src/components/Switcher/style.less
+++ b/src/components/Switcher/style.less
@@ -1,7 +1,11 @@
 .switcher-container {
   padding: 10px;
+  width: 100%;
+  max-width: 450px;
   .switch {
     cursor: pointer;
+    margin-top: 5px;
+    text-align: center;
     .svg-inline--fa {
       color: #eee;
       font-size: 25px;
@@ -39,6 +43,7 @@
       border-style: solid;
       border-color: #ddd;
       background-color: #fff;
+      background-image: linear-gradient(to right top, #814a9e, #d1518f, #ff7270, #ffa954, #f5e459);
       border-radius: 9px
     }
     .ui-checkbox:checked + .ui-button {
@@ -46,6 +51,10 @@
       //background-color: #7EB36D;
       //border-color: #5B9E46
     }
+  }
+  .input-container {
+    display: flex;
+    justify-content: center;
   }
 
 }
