Starting messages section

--- a/src/components/InputBox/style.less
+++ b/src/components/InputBox/style.less
@@ -1,8 +1,9 @@
-.search-box-container {
+.input-box-container {
   height: 100vh;
   width: 100vw;
   background-image: linear-gradient(to right top, #814a9e, #d1518f, #ff7270, #ffa954, #f5e459);
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-content: flex-end;
+  flex-direction: column;
 }
