--- a/src/components/MicInput/style.less
+++ b/src/components/MicInput/style.less
@@ -1,6 +1,7 @@
 .mic-input-container {
   width: 120px;
   height: 120px;
+  order: 9;
   .mic-button {
     background-color: #eee;
     width: 100%;
