--- a/src/components/MicInput/style.less
+++ b/src/components/MicInput/style.less
@@ -1,13 +1,17 @@
 .mic-input-container {
-  width: 120px;
-  height: 120px;
+  width: 90px;
+  height: 90px;
   order: 9;
   .mic-button {
     background-color: #eee;
     width: 100%;
     height: 100%;
-    font-size: 80px;
-    padding: 18px 31px;
+    font-size: 50px;
+    padding: 20px 27px
   }
-
+  &.rec {
+    .mic-button {
+      border: 1px solid red;
+    }
+  }
 }
