--- a/src/components/Switcher/style.less
+++ b/src/components/Switcher/style.less
@@ -2,6 +2,10 @@
   padding: 10px;
   width: 100%;
   max-width: 450px;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translate(-50%, 0%);
   .switch {
     cursor: pointer;
     margin-top: 5px;
