--- a/src/components/Messages/style.less
+++ b/src/components/Messages/style.less
@@ -12,12 +12,12 @@
     clear: both;
     float: right;
     padding: 6px 10px 7px;
-    border-radius: 10px 10px 0px 10px;
+    border-radius: 10px 10px 0 10px;
     background: rgba(0, 0, 0, .3);
     margin: 5px 0;
     font-size: 11px;
     line-height: 1.4;
-    margin-left: 35px;
+    //margin-left: 35px;
     color: #fff;
     position: relative;
     text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
@@ -26,7 +26,7 @@
     }
     &.computer {
       float: left;
-      border-radius: 10px 0px 10px 10px;
+      border-radius: 10px 10px 10px 0;
       background: rgba(0, 0, 0, .3);
     }
   }
