Modernize project, upgrade deps, webpack, babel, etc

--- a/src/components/Suggestions/style.less
+++ b/src/components/Suggestions/style.less
@@ -1,15 +1,18 @@
 .suggestions {
-  width: 100vw;
-  overflow-x: scroll;
+  display: flex;
+  justify-content: space-between;
   .suggestion {
     border: 1.4px solid #fff;
     padding: 5px 10px;
     background-color: transparent;
     outline: none;
-    display: inline-block;
-    float: left;
     border-radius: 20px;
     color: #fff;
     margin: 10px 2.5px;
+    cursor: pointer;
+    &:hover, &:active {
+      background-color: #fff;
+      color: #da5789;
+    }
   }
 }
