--- a/src/components/Switcher/style.less
+++ b/src/components/Switcher/style.less
@@ -2,21 +2,21 @@
   padding: 10px;
   width: 100%;
   max-width: 450px;
-  position: absolute;
-  bottom: 0px;
-  left: 50%;
-  transform: translate(-50%, 0%);
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  
   .switch {
     cursor: pointer;
     margin-top: 5px;
-    text-align: center;
-    .svg-inline--fa {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    i.fas {
       color: #eee;
       font-size: 25px;
       margin: 1px 5px;
-      &.fa-microphone {
-        font-size: 20px;
-      }
+      
     }
     .ui-switch {
       display: inline-block;
@@ -58,6 +58,7 @@
   }
   .input-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
   }
 
