--- a/src/components/InputBox/style.less
+++ b/src/components/InputBox/style.less
@@ -2,8 +2,8 @@
   height: 100vh;
   width: 100vw;
   background-image: linear-gradient(to right top, #814a9e, #d1518f, #ff7270, #ffa954, #f5e459);
-  //display: flex;
-  //justify-content: center;
-  //align-content: flex-end;
-  //flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-content: flex-end;
+  flex-direction: column;
 }
