--- a/src/components/MicInput/style.less
+++ b/src/components/MicInput/style.less
@@ -1,13 +1,14 @@
 .mic-input-container {
   width: 90px;
   height: 90px;
-  order: 9;
+  margin: 20px auto;
   .mic-button {
     background-color: #eee;
     width: 100%;
     height: 100%;
     font-size: 50px;
-    padding: 20px 27px
+    padding: 10px 28px;
+    cursor: pointer;
   }
   &.rec {
     .mic-button {
