--- a/src/components/Messages/style.less
+++ b/src/components/Messages/style.less
@@ -3,31 +3,30 @@
   width: 100%;
   max-width: 450px;
   flex: 1 1 auto;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 0.5);
   overflow: hidden;
   position: relative;
-
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
   .message {
-    clear: both;
-    float: right;
-    padding: 6px 10px 7px;
+    align-self: flex-end;
+    padding: 10px;
     border-radius: 10px 10px 0 10px;
-    background: rgba(0, 0, 0, .3);
+    background: rgba(0, 0, 0, 0.3);
     margin: 5px 0;
     font-size: 11px;
     line-height: 1.4;
     //margin-left: 35px;
     color: #fff;
     position: relative;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
-    &:first-letter{
-      text-transform: capitalize
-    }
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     &.computer {
-      float: left;
+      align-self: flex-start;
       border-radius: 10px 10px 10px 0;
-      background: rgba(0, 0, 0, .3);
+      background: rgba(0, 0, 0, 0.3);
     }
   }
 }
